# cookiecutter-data-science

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.azure-pipelines/: linux.yml
{{cookiecutter.project_name}}/data/: README.md
{{cookiecutter.project_name}}/data/processed/: README.md
{{cookiecutter.project_name}}/data/raw/: README.md
{{cookiecutter.project_name}}/docs/: README.md
{{cookiecutter.project_name}}/tests/: __init__.py  test_template.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
