[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cookiecutter-data-science"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    "Omar Ali Sheikh <sheikhomar(at)gmail>"
]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7"
jinja2-git = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pre-commit = "^2.4"

wemake-python-styleguide = "^0.14.0"
flake8-pytest-style = "^1.1.1"
nitpick = "^0.22"
safety = "^1.10.3"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"
