[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
license = "MIT"
repository = ""
keywords = [
    "data-science", "python",
]
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23"
pandas = "^1.0"
seaborn = "^0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.4"
flake8 = "^3.8.2"
flake8-docstrings = "^1.5.0"
darglint = "^1.3.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
